--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,7 +25,7 @@
         "ALLOWED_ORIGINS": "http://localhost:5173",
         "DEV_MODE": "true",
         "LOG_LEVEL": "info",
-        "LOG_FILE": "tl-backend.log"
+        "LOG_FILE": "./tl-backend.log"
       },
       "console": "integratedTerminal",
       "justMyCode": false
